--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,5 +1,7 @@
 log4j.rootLogger=INFO, console, file
 
+log4j.logger.log.voltcore.logging=FATAL
+
 log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.File=jepsen.log
 log4j.appender.file.layout=org.apache.log4j.EnhancedPatternLayout
