--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -10,4 +10,4 @@ log4j.appender.file.layout.conversionPattern=%d{ISO8601}{GMT}\t%p\t[%t] %c: %m%n
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
 log4j.appender.console.layout=org.apache.log4j.EnhancedPatternLayout
-log4j.appender.console.layout.conversionPattern=%d{ISO8601}{GMT}\t%p\t[%t] %c: %m%n
+log4j.appender.console.layout.conversionPattern=%p\t[%t] %c: %m%n
